--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,8 @@ body {
   padding-bottom: 150px;
   background-color: white;
   position: relative;
-  top: 50px
+  top: 50px;
+  
   
 }
 
@@ -80,6 +81,14 @@ body {
   width: 35%; 
   color: #41fa5d;
   font-size: 30pt;
+}
+
+.login-error {
+  position: absolute;
+  top: 80px;
+  left: 60px;
+  color: red;
+  
 }
 
 .login-pass, .login-name , .create-pass, .create-name{
@@ -113,6 +122,13 @@ body {
   border-width: 2px;
   font-size: 20pt;
   color: #41fa5d;
+}
+
+.create-passInequity {
+  position: absolute;
+  top: 50px;
+  left: 85px;
+  color: red;
 }
 
 
