--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,11 @@ body, html {
 
 body {
   
-  background-image: linear-gradient(#87ff99,#00b81c);
+  /* background-image: linear-gradient(#87ff99,#00b81c);
   background-repeat: no-repeat;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh; */
+  background-color: #41fa5d;
   padding: 0;
 
 }
@@ -161,15 +162,28 @@ body {
 .section {
   display: grid;
   height: 100vh;
+  justify-items: center;
   
   grid-template-columns: 100%;
   grid-template-rows: 20% 40% 40%;
   grid-template-areas: "header" "content";
 }
 
+.section-title-wrapper {
+  position: fixed;
+  background-color: #41fa5d;
+  width: 100vw;
+  height: 100px;
+}
+
 .section-title {
-  grid-area: header;
+  /* grid-area: header; */
   font-size: 25pt;
+  
+  
+  justify-self: center;
+  
+  top: -30px;
   /* color: white; */
   
 }
@@ -179,7 +193,9 @@ body {
   align-self: center;
 }
 
-
+.boards {
+  margin: 0 auto;
+}
 
 .boards-content {
   grid-row-start: 2;
@@ -187,22 +203,45 @@ body {
   
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+  flex-shrink: 0;
   /* align-items: flex-start; */
   /* justify-content: space-around; */
   
   padding: 5px;
 }
 
+.board-wrapper {
+  text-align: center;
+}
+
 .board {
-  width: 150px;
-  height: 100px;
+  width: 80vw;
+  height: 45vw;
   background-color: white;
   margin: 5px;
+  margin-bottom: 20px;
   border-radius: 5px;
   transition: transform 0.5s
 }
 .board:hover {
   transform: scale(1.2);
+}
+
+.board-title {
+  background-color: rgba(0,0,0,0.5);
+  width: auto;
+  
+  display: inline-block;
+  border-radius: 15px;
+  color: white;
+  font-weight: 500;
+  padding-left: 15px;
+  padding-right: 15px;
+  
+  font-size: 20pt;
+  
+  
 }
 
 .boards-add-wrapper {
@@ -262,10 +301,19 @@ body {
   /* background-color: #333; */
 }
 .board-menu-content {
-  /* grid-row-start: 2;
-  grid-row-end: 4; */
-  /* height: 100vh; */
-  /* background-color: #333; */
+  
+    /* grid-row-start: 2;
+    grid-row-end: 3;
+    
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    flex-shrink: 0;
+    /* align-items: flex-start; */
+    /* justify-content: space-around; */
+    
+    /* padding: 5px; */ 
+  
 }
 
 .board-menu-addNote {
@@ -290,6 +338,8 @@ body {
 }
 .stickyNote-title {
   background-color: rgba(255,255,255,0.5);
+  position: relative;
+  top: -16px;
   padding-bottom: 1px;
   padding-top: 0px;
   height: 35px;
@@ -300,9 +350,26 @@ body {
   position: relative;
   top: 10px;
   outline: none;
+  font-weight: 500;
+}
+
+.stickyNote-colorIcon {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  right: 0px;
+}
+
+.stickyNote-picker {
+  position: absolute;
+  right: -105px;
+  top: -85px;
+  width: 10%;
 }
 
 .noteData {
+  position: relative;
+  top: -20px;
   margin-left: -5px;
 }
 
@@ -369,6 +436,21 @@ body {
 @media only screen and (min-width: 961px) {
   .login, .create {
     top: 100px;
+  }
+
+  .board {
+    width: 150px;
+    height: 100px;
+    
+  }
+  .board-title {
+    background-color: rgba(0,0,0,0.5);
+    width: 80%;
+    padding-left: 0px;
+    padding-right: 0px;
+    font-size: 15pt;
+    
+    
   }
 }
 
