--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/zsr6vpj.css");
+
 body, html {
   margin: 0;
   padding: 0;
@@ -34,6 +36,8 @@ body {
 
 .welcome-text {
   font-size: 70pt;
+  font-family: brush-script-std, sans-serif;
+  color: white;
 }
 
 .welcome-login {
@@ -43,9 +47,11 @@ body {
   margin-left: 5px;
   font-size: 20pt;
   font-weight: bold;
-  background-color: white;
-  color: #41fa5d;
-  border: none;
+  background-color: #41fa5d;
+  color: white;
+  border: solid white;
+  border-width: 2px;
+  border-radius: 10px;
   box-shadow: 0px 0px 0px rgba(0,0,0,0);
   transition: box-shadow 0.5s;
   
@@ -174,13 +180,19 @@ body {
   background-color: #41fa5d;
   width: 100vw;
   height: 100px;
+  text-align: center;
 }
 
 .section-title {
   /* grid-area: header; */
-  font-size: 25pt;
-  
-  
+  font-size: 30pt;
+  width: 30vw;
+  border: solid white;
+  border-radius: 10px;
+  border-width: 3px;
+  display: inline-block;
+  color: white;
+  font-family: brush-script-std, sans-serif;
   justify-self: center;
   
   top: -30px;
@@ -222,10 +234,10 @@ body {
   margin: 5px;
   margin-bottom: 20px;
   border-radius: 5px;
-  transition: transform 0.5s
+  transition: transform 0.2s
 }
 .board:hover {
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
 
 .board-title {
@@ -313,6 +325,24 @@ body {
     /* justify-content: space-around; */
     
     /* padding: 5px; */ 
+  
+}
+
+.board-menu-title {
+  position: absolute;
+  left: 40%;
+  background-color: rgba(0,0,0,0.5);
+  width: auto;
+  /* margin: 0 auto; */
+  /* display: inline-block; */
+  border-radius: 15px;
+  color: white;
+  font-weight: 500;
+  padding-left: 15px;
+  padding-right: 15px;
+  
+  font-size: 20pt;
+  
   
 }
 
@@ -425,19 +455,59 @@ body {
   outline: none;
 }
 
+.svg {
+  -inkscape-font-specification:'Brush Script Std Medium';
+  fill:#000;
+  font-family:'Brush Script Std';
+  font-feature-settings:normal;
+  font-size:45.4;
+  font-variant-caps:normal;
+  font-variant-ligatures:normal;
+  font-variant-numeric:normal;
+  font-weight:500;
+  letter-spacing:0;
+  line-height:1.25;
+  text-align:start;
+  text-anchor:start;
+  word-spacing:0;
+  writing-mode: lr-tb;
 
+}
+
+.svg-path {
+  -inkscape-font-specification:'Brush Script Std, Medium';
+  fill:#fff;
+  font-family:'Brush Script Std';
+  font-feature-settings:normal;
+  font-size:60.4;
+  font-variant-caps:normal;
+  font-variant-ligatures:normal;
+  font-variant-numeric:normal;
+  font-weight:500;
+  stroke-width:0.26;
+  text-align:start;
+  text-anchor:start;
+  writing-mode:lr-tb;
+  width: 500px;
+  stroke-width: 2px;
+  stroke: red;
+
+}
 
 
 .bm-item {
   display: inline-block;
   text-decoration: none;
   margin-bottom: 10px;
-  color: #d1d1d1;
+  color: #41fa5d;
   transition: color 0.2s;
+  font-size: 24pt;
+  font-weight: 500;
+  outline: none;
 }
 
 .bm-item:hover { 
-  color: white;
+  color: #373a47;
 }
 
 .bm-burger-button {
@@ -461,7 +531,7 @@ body {
   background: #bdc3c7;
 }
 .bm-menu {
-  background: #373a47;
+  background: white;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
